# datus-semantic-adapter

./: .gitmodules  pyproject.toml
datus-semantic-core/: pyproject.toml
datus-semantic-core/datus_semantic_core/: __init__.py  base.py  config.py  exceptions.py  models.py  registry.py  testing.py
datus-semantic-core/tests/unit/: test_base.py  test_config.py  test_models.py  test_registry.py  test_testing.py
datus-semantic-metricflow/: README.md  install.sh  pyproject.toml
datus-semantic-metricflow/datus_semantic_metricflow/: __init__.py  adapter.py  config.py
datus-semantic-metricflow/datus_semantic_metricflow/examples/: basic_usage.py
datus-semantic-metricflow/datus_semantic_metricflow/tests/: test_adapter.py  test_registry.py
datus_semantic_metricflow/: pyproject.toml
datus_semantic_metricflow/datus_semantic_metricflow/: __init__.py  adapter.py  config.py  models.py
