[project]
name = "datus-semantic-core"
version = "0.1.0"
description = "Core interfaces for Datus semantic adapters"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "DatusAI", email = "support@datus.ai"}]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_semantic_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
